--- a/customer-template/src/components/Footer/style.css
+++ b/customer-template/src/components/Footer/style.css
@@ -1,8 +1,8 @@
 footer {
   background: #252d41;
-  position: fixed;
+  /* position: fixed;
   left: 0;
-  bottom: 0;
+  bottom: 0; */
   width: 100%;
   color: white;
 }
