--- a/customer-template/src/assets/css/form.css
+++ b/customer-template/src/assets/css/form.css
@@ -16,3 +16,47 @@
   letter-spacing: 1px;
   margin-bottom: 5px;
 }
+
+.form-group.required label:after {
+  content: "*";
+  color: red;
+  margin-left: 3px;
+}
+
+.form-group .form-control::placeholder,
+.el-input__inner::placeholder {
+  color: #757575;
+  opacity: 0.5;
+}
+
+.form-container {
+  .card {
+    max-width: 500px;
+    width: 500px;
+  }
+
+  .btn-sign-in {
+    color: #139896;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    border-radius: 30px;
+    background: rgba(178, 223, 219, 0.5);
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    cursor: pointer;
+  }
+
+  .btn-sign-in span {
+    text-align: center;
+    width: -webkit-fill-available;
+  }
+
+  .link {
+    text-align: end;
+    text-decoration: none;
+    color: #139896;
+  }
+}
