--- a/customer-template/src/assets/main.css
+++ b/customer-template/src/assets/main.css
@@ -88,6 +88,10 @@ section {
   list-style: none;
 }
 
+.fw-100 {
+  font-weight: 100;
+}
+
 @media only screen and (max-width: 1024px) {
   section {
     padding-top: 35px;
