--- a/customer-template/src/assets/main.css
+++ b/customer-template/src/assets/main.css
@@ -80,8 +80,8 @@ html {
 }
 
 section {
-  padding-top: 75px;
-  padding-bottom: 75px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 .list-style-none {
@@ -90,6 +90,18 @@ section {
 
 .fw-100 {
   font-weight: 100;
+}
+
+.border-18 {
+  border-radius: 18px !important;
+}
+
+.color-primary {
+  color: var(--primary) !important;
+}
+
+.mr-6 {
+  margin-right: 2rem;
 }
 
 @media only screen and (max-width: 1024px) {
