UI: mentors page

--- a/customer-template/src/assets/main.css
+++ b/customer-template/src/assets/main.css
@@ -1,5 +1,7 @@
 :root {
   --primary: #18bebc;
+  --secondary: #139896;
+  --secondary-green: #1d7962;
   --y-orange: #fdb930;
   --y-green: #92c549;
   --y-dark-blue: #003a5c;
