update: admin mentor management

--- a/admin-template/assets/scss/variables.scss
+++ b/admin-template/assets/scss/variables.scss
@@ -1,6 +1,6 @@
-$color-blue: #3563e9;
-$color-blue-darker: #0015d4;
-$color-primary: rgba(9, 26, 117, 0.9); // use for title...
+$color-blue: #139896;
+$color-blue-darker: #139896;
+$color-primary: #0a5565; // use for title...
 $color-secondary: #5F6C85; // use  for gray text 
 $color-red: #E02D3C;
 $color-red-2: #E60023;
