--- a/customer-template/src/assets/main.css
+++ b/customer-template/src/assets/main.css
@@ -1,5 +1,6 @@
 :root {
   --primary: #18bebc;
+  --primary-text: #0a5565;
   --secondary: #139896;
   --secondary-green: #1d7962;
   --y-orange: #fdb930;
