--- a/customer-template/src/pages/UserInformation/style.css
+++ b/customer-template/src/pages/UserInformation/style.css
@@ -89,19 +89,19 @@ input[type="radio"] {
   display: none;
 }
 
-.mentor-action {
+.user-action {
   display: inline-block;
   border: 1px solid #ddd;
   border-radius: 12px;
   margin-left: 40px;
 }
 
-.mentor-action .tab:first-child {
+.user-action .tab:first-child {
   border-top-left-radius: 12px;
   border-bottom-left-radius: 12px;
 }
 
-.mentor-action .tab:last-child {
+.user-action .tab:last-child {
   border-top-right-radius: 12px;
   border-bottom-right-radius: 12px;
 }
@@ -121,16 +121,6 @@ label:last-child {
   cursor: pointer;
 }
 
-.mentor-infor-header {
-  font-size: 18px;
-  padding-bottom: 16px;
-}
-
-.text {
-  font-weight: bold;
-  color: var(--primary);
-}
-
 .content-card {
   font-size: 18px;
 }
@@ -145,14 +135,6 @@ label:last-child {
   text-align: center;
 }
 
-.sub-section {
-  margin: 20px 40px 20px 0px;
-}
-
-.advertisement-img {
-  width: 100%;
-}
-
 .mini-ava {
   width: 50px;
   height: 50px;
@@ -160,32 +142,42 @@ label:last-child {
   object-fit: cover;
 }
 
-.sub-card {
-  display: flex;
-  flex-direction: column;
-}
-
 .text-span {
   font-weight: 400;
   color: #555555;
 }
-.col-3-only-img {
+
+.flex-center-center {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.sub-card a {
-  text-decoration: none;
-  color: #000;
-  margin-bottom: 24px;
-}
-
-.comment-card {
-  width: 100%;
+.flex-center-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .content-comment {
   padding: 10px;
   color: #555555;
+}
+
+.user-section h5 {
+  font-weight: bold;
+  color: var(--primary);
+  text-transform: uppercase;
+}
+
+.user-section {
+  padding: 1rem;
+}
+
+.user-section:not(:last-child) {
+  border-bottom: 1px solid #d0dedb;
+}
+
+.advertisement {
+  margin: 20px 0px;
 }
