--- a/customer-template/src/style.css
+++ b/customer-template/src/style.css
@@ -14,6 +14,10 @@
   -webkit-text-size-adjust: 100%;
 }
 
+* {
+  font-family: "Roboto", sans-serif;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
