--- a/customer-template/src/pages/MyBlog/style.css
+++ b/customer-template/src/pages/MyBlog/style.css
@@ -1,9 +1,3 @@
-.page-title {
-  display: flex;
-  justify-content: space-between;
-  padding-left: 60px;
-}
-
-.create-button {
-  display: block;
+.mentor-post:last-child {
+  border-bottom: none !important;
 }
