--- a/customer-template/src/style.css
+++ b/customer-template/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Mulish', sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -15,13 +15,14 @@
 }
 
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Mulish', sans-serif;
+  font-weight: 600;
 }
 
 a {
   font-weight: 500;
   color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
 }
 a:hover {
   color: #535bf2;
