--- a/customer-template/src/pages/PersonalInformation/style.css
+++ b/customer-template/src/pages/PersonalInformation/style.css
@@ -21,3 +21,10 @@ label {
   width: 50%;
   display: inline-block;
 }
+
+.avatar-img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+}
