--- a/customer-template/src/pages/UserInformation/style.css
+++ b/customer-template/src/pages/UserInformation/style.css
@@ -17,8 +17,9 @@
   width: 100%;
   height: 240px;
 }
-.avatarImg {
-  max-width: 150px;
+
+.avatar-img img {
+  width: 150px;
   height: 150px;
   border-radius: 50%;
   border: 2px solid #ffffff;
@@ -36,7 +37,7 @@
   background-color: rgba(0, 0, 0, 0.1);
   color: #fff;
   display: flex;
-  align-items: stretch;
+  align-items: center;
   opacity: 1;
   flex-wrap: wrap;
 }
