--- a/customer-template/src/pages/UserInformation/element/AvatarModal/style.css
+++ b/customer-template/src/pages/UserInformation/element/AvatarModal/style.css
@@ -2,6 +2,6 @@ img {
   width: 200px;
   height: 200px;
   object-fit: cover;
-  border: 50%;
+  border-radius: 50%;
   background-color: #eae7e7;
 }
