--- a/customer-template/src/pages/Home/style.css
+++ b/customer-template/src/pages/Home/style.css
@@ -1,9 +1,10 @@
-.hero-section {
+.banner-section {
   background: linear-gradient(
     180deg,
     rgba(24, 190, 188, 0.4) 0%,
     rgba(255, 255, 255, 0) 100%
   );
+  /* background: linear-gradient(#ffffff 0%, #8DD2D2 40%); */
 }
 
 .hero-section p {
