schedule safe deletion

--- a/backend/src/templates/email/bookappointment.hbs
+++ b/backend/src/templates/email/bookappointment.hbs
@@ -1,2 +1,9 @@
-<p>Hi {{mentor}}</p>
-<p>{{mentee}} booked an appointment with you</p>
+<p>Hi {{mentor}},</p>
+<p>{{mentee}} has booked an appointment with you.</p>
+<p>Appointment Details:</p>
+{{! <ul> }}
+{{!-- <li><strong>Note:</strong> {{note}}</li> --}}
+{{!-- <li><strong>Start Time:</strong> {{start}}</li> --}}
+{{!-- <li><strong>End Time:</strong> {{end}}</li> --}}
+{{! </ul> }}
+<p>Thank you for your commitment to mentoring!</p>
