--- a/backend/src/templates/email/register.hbs
+++ b/backend/src/templates/email/register.hbs
@@ -1,2 +1,16 @@
-<p>{{name}}</p>
-<p>Welcome to IT-Mentor Community</p>
+<p>Hello {{name}},</p>
+<p>We're delighted to welcome you to the IT-Mentor Community! 🚀</p>
+<p>As a member, you've joined a vibrant community of IT professionals dedicated
+  to learning, sharing experiences, and fostering growth. Whether you're seeking
+  guidance on specific technologies, career development, or industry trends,
+  you're in the right place!</p>
+<p>Feel free to explore our platform, connect with experienced mentors, and dive
+  into discussions that align with your interests. Your journey to success
+  starts here, and we're here to support you every step of the way.</p>
+<p>If you have any questions, need assistance, or want to share your own
+  insights, our community is here for you. Together, we'll create a valuable and
+  collaborative environment for everyone.</p>
+<p>Once again, welcome to the IT-Mentor Community! We can't wait to see the
+  great things you'll achieve with us.</p>
+
+<p>Cheers! From IT-Mentor Community</p>
