added video duration on route get course by id, format mail date

--- a/backend/src/templates/email/bookappointment.hbs
+++ b/backend/src/templates/email/bookappointment.hbs
@@ -4,7 +4,7 @@
   is awaiting for your confirmation of a new requested appointment. Here are the
   details:</p>
 <ul>
-  <li><strong>Session Time:</strong> {{start_at}} to {{end_at}}</li>
+  <li><strong>Session Time:</strong> {{start_at}} to {{end_at}}, {{date}}</li>
   <li><strong>Note:</strong> {{note}}</li>
   <li><strong>Subject:</strong> {{expertise}}</li>
 </ul>
