--- a/backend/src/templates/email/confirmappointment.hbs
+++ b/backend/src/templates/email/confirmappointment.hbs
@@ -3,7 +3,7 @@
 <p>{{mentor}}
   has confirmed of a your requested appointment. Here are the details:</p>
 <ul>
-  <li><strong>Session Time:</strong> {{start_at}} to {{end_at}}</li>
+  <li><strong>Session Time:</strong> {{start_at}} to {{end_at}}, {{date}}</li>
   <li><strong>Note:</strong> {{note}}</li>
   <li><strong>Subject:</strong> {{expertise}}</li>
   <li><strong>Link:</strong> {{link}}</li>
