--- a/admin-template/assets/scss/table.scss
+++ b/admin-template/assets/scss/table.scss
@@ -1,15 +1,15 @@
 @import "variables";
 @import "mixins";
 
-custom table
-th, tr {
+custom table th,
+tr {
   text-align: center !important;
 }
 td {
   border-top: none !important;
 }
 .table {
-  border-collapse:separate; 
+  border-collapse: separate;
   border-spacing: 0 8px;
   // border-top: 1px solid $color-gray-lighter;
 }
@@ -23,6 +23,15 @@ td {
   background-color: $color-white;
   position: absolute;
   top: 49px;
+  width: 98%;
+  height: 8px;
+  z-index: 12;
+}
+
+.layer-new-block {
+  background-color: $color-white;
+  position: absolute;
+  top: 0px;
   width: 99%;
   height: 8px;
   z-index: 12;
@@ -37,20 +46,22 @@ td {
 .table-striped > thead > tr {
   background-color: $bg-gray;
 }
-.table-striped > tbody > tr:nth-child(2n+1), .table-striped > tbody > tr:nth-child(2n+1) {
+.table-striped > tbody > tr:nth-child(2n + 1),
+.table-striped > tbody > tr:nth-child(2n + 1) {
   background-color: $color-white;
   &:hover {
     background-color: $color-blue-hover !important;
   }
 }
-.table-striped > tbody > tr:nth-child(2n), .table-striped > tbody > tr:nth-child(2n) {
+.table-striped > tbody > tr:nth-child(2n),
+.table-striped > tbody > tr:nth-child(2n) {
   background-color: $bg-gray;
   &:hover {
     background-color: $color-blue-hover !important;
   }
 }
 
-// Custom scroll bar default  
+// Custom scroll bar default
 // ::-webkit-scrollbar {
 //   width: 2px !important;
 // }
