--- a/customer-template/src/assets/css/button.css
+++ b/customer-template/src/assets/css/button.css
@@ -29,6 +29,7 @@ button:focus {
   border: 0px;
   background: white !important;
   color: #138496 !important;
+  border: 1px solid #138496 !important;
 }
 
 .btn.btn-white:hover,
